# radar-signal-processing

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  README.org  constants.py  index.html  noise.py  objects.inv  pulse_doppler_radar.py  pyproject.toml  range_equation.py  rdm.py  rdm_helpers.py  requirements.txt  rf_datacube.py  ruff.toml  setup.py  snapshot.py  utilities.py  vbm.py  waveform.py  waveform_helpers.py  waveforms.py  waveforms_matchedFilters.py
.github/workflows/: docs.yml  publish.yml  python-app.yml  ruff.yml
api/: constants.html  geometry.html  monopulse.html  noise.html  pulse_doppler_radar.html  range_equation.html  rdm.html  returns.html  rf_datacube.html  sar.html  sar_radar.html  uniform_linear_arrays.html  utilities.html  vbm.html  waveform.html  waveform_helpers.html
apps/: make_figures.py  run_apps.sh
apps/exercises/: 1_0_range_equation.py  2_0_pulse_doppler_radar.py  3_1_waveforms_xcorrelation.py  3_2_barker_xcorrelation_sidelobes.py  3_3_noisy_xcorrelations.py  3_4_barker_vs_uncoded_ampAndWidth.py  3_5_ambiguity_function.py  4_1_datacube_process_test.py  4_4_windowing_comparison.py  4_5_complex_tone.py  (+25 more)
docs/: backlog.md  exercises.md  make_figures.py  manuscript.org  rdm_algorithm.md  sar_algorithm.md  todo.org
example_rdms/: skin_example.py  vbm_w_lfm.py
examples/: kitchen_sink.py  skin.py  skin_example.py  skin_snr.py  vbm.py  vbm_w_lfm.py  vbm_w_lfm_alias.py
exercises/: s3p1.py  s3p2.py  s3p3.py  s3p4.py  s4p1.py  s4p5.py  s4p6.py
rsp/: constants.py  geometry.py  noise.py  pulse_doppler_radar.py  range_equation.py  rdm.py  rdm_helpers.py  rf_datacube.py  uniform_linear_arrays.py  utilities.py  vbm.py  waveform.py  waveform_helpers.py
search/: search_index.json
studies/: vbm_methods.py
tests/: 1_range_equation.py  2_pulse_doppler_radar.py  3_1_waveforms_xcorrelation.py  3_2_barker_xcorrelation_sidelobes.py  3_3_noisy_xcorrelations.py  3_4_barker_vs_uncoded_ampAndWidth.py  4_1_datacube_process_test.py  4_4_windowing_comparison.py  4_5_complex_tone.py  4_5_windowing_comparison.py  4_6_calc_r_and_rdot_from_positions.py  5_1_skin_in_correct_rangedoppler_bin.py  5_2_memory_in_correct_rangedoppler_bin.py  5_stationary_rdm_snapshot.py  6_rdm_keystone.py  7_1-3_linear_arrays_figs24_28.py  7_4_linear_arrays_ifft_array_factor.py  7_5_monopulse_snr_test.py  7_5_monopulse_snr_test_freq.py  7_6_phase_center_location.py  7_7_sub_array_sum_diff.py  7_8_monopulse_tgt_doppler_cell.py  7_8_monopulse_tgt_doppler_cell_time.py  7_linear_array_studies.py  8_0_detection.py  run_all_tests.sh  test_array_phase_center.py  test_jammer_in_correct_rangedoppler_bin.py  test_matched_filter_peak.py  test_memory_in_correct_rangedoppler_bin.py  test_monopulse_angle_estimation.py  test_monopulse_rdm.py  test_phase_utilities.py  test_pulse_doppler_radar.py  test_range_and_rangerate.py  test_skin_in_correct_rangedoppler_bin.py  test_tests.sh
(+101 files in other folders)
