[build-system]
requires = ["setuptools>=64,<77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rad-lab"
description = "A module for general radar signal processing library"
readme = "README.md"
license = { text = "GPL-3.0-only" }
keywords = ["radar", "signal processing", "range-doppler map"]
requires-python = ">=3.11"
dynamic = ["version"]
authors = [{ name = "John Nehls" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
        "numpy>=1.26.4",
        "scipy>=1.11.3",
        "matplotlib>=3.9.4"
        ]

[project.optional-dependencies]
dev = ["flake8", "pytest"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Repository = "https://github.com/JohnNehls/rad-lab"
Documentation = "https://johnnehls.github.io/rad-lab/"

[tool.setuptools_scm]
version_file = "src/rad_lab/_version.py"

[tool.ruff]
# Same as Black.
line-length = 99
target-version = "py311"

[tool.ruff.lint]
preview = true
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "E225"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
preview = true
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"